[gd_scene load_steps=7 format=3 uid="uid://bh4owj8k1r3y0"]

[ext_resource type="Script" path="res://gui/gui.gd" id="1_d1v18"]
[ext_resource type="Script" path="res://gui/cam_label_timer.gd" id="1_uu4hx"]
[ext_resource type="PackedScene" uid="uid://da0oc27bh80ic" path="res://gui/city_menu.tscn" id="3_yniq2"]
[ext_resource type="PackedScene" uid="uid://c83ingpvbre02" path="res://gui/create_route_menu.tscn" id="4_5jou7"]

[sub_resource type="Theme" id="Theme_wa76b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wywbp"]
bg_color = Color(0.552941, 0.611765, 0.639216, 0.219608)

[node name="GUI" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1v18")

[node name="GUIContainer" type="CanvasLayer" parent="."]
layer = 2

[node name="PlayerCtx" type="Panel" parent="GUIContainer"]
custom_minimum_size = Vector2(64, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="PlayerCtxContainer" type="HBoxContainer" parent="GUIContainer/PlayerCtx"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="GoldLabel" type="Label" parent="GUIContainer/PlayerCtx/PlayerCtxContainer"]
layout_mode = 2
text = "100g"

[node name="TopRight" type="Control" parent="GUIContainer"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 25.0
offset_right = -150.0
offset_bottom = 25.0
grow_horizontal = 0

[node name="CamLabelTimer" type="Container" parent="GUIContainer/TopRight"]
layout_mode = 0
script = ExtResource("1_uu4hx")

[node name="CamLabel" type="Label" parent="GUIContainer/TopRight/CamLabelTimer"]
layout_mode = 2
theme = SubResource("Theme_wa76b")
theme_override_styles/normal = SubResource("StyleBoxFlat_wywbp")
text = "Cam Speed: X.X"

[node name="CamLabelTimer" type="Timer" parent="GUIContainer/TopRight/CamLabelTimer/CamLabel"]
wait_time = 0.5
one_shot = true

[node name="CityMenu" parent="GUIContainer" node_paths=PackedStringArray("gui") instance=ExtResource("3_yniq2")]
visible = false
gui = NodePath("../..")

[node name="CreateRouteMenu" parent="GUIContainer" node_paths=PackedStringArray("gui") instance=ExtResource("4_5jou7")]
visible = false
gui = NodePath("../..")

[connection signal="timeout" from="GUIContainer/TopRight/CamLabelTimer/CamLabel/CamLabelTimer" to="GUIContainer/TopRight/CamLabelTimer" method="_on_cam_label_timer_timeout"]
[connection signal="open_create_route_ui" from="GUIContainer/CityMenu" to="GUIContainer/CreateRouteMenu" method="_on_city_menu_open_create_route_ui"]
[connection signal="create_route" from="GUIContainer/CreateRouteMenu" to="." method="_on_create_route_menu_create_route"]
